deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: schoen
  labels:
    app: api
spec:
  ports:
    - port: 5000
  selector:
    app: api
    tier: frontend
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: schoen
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - api.korbacher-energiezentrum.de.ah.hbbx.de
      secretName: api.korbacher-energiezentrum.de.ah.hbbx.de-tls
  rules:
    - host: api.korbacher-energiezentrum.de.ah.hbbx.de
      http:
        paths:
          - path: /
            backend:
              serviceName: api-svc
              servicePort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: schoen
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api
        tier: frontend
    spec:
      imagePullSecrets:
        - name: gitlab-credentials
      containers:
        - image: dev.hbbx.de:4300/ev-manager/ev-manager-data-api:latest
          name: api
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: schoen
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
    tier: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: schoen
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
        tier: database
    spec:
      containers:
        - image: postgres:11
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-pv
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-pv
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: schoen
  labels:
    app: minio
spec:
  ports:
    - port: 9000
  selector:
    app: minio
    tier: frontend
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: schoen
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - minio.api.korbacher-energiezentrum.de.ah.hbbx.de
      secretName: minio.api.korbacher-energiezentrum.de.ah.hbbx.de-tls
  rules:
    - host: minio.api.korbacher-energiezentrum.de.ah.hbbx.de
      http:
        paths:
          - path: /
            backend:
              serviceName: minio-svc
              servicePort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: schoen
  labels:
    app: minio
spec:
  selector:
    matchLabels:
      app: minio
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
        tier: frontend
    spec:
      containers:
        - image: minio/minio
          name: minio
          args: ["server", "/data"]
          ports:
            - containerPort: 9000
              name: minio
          volumeMounts:
            - name: minio-pv
              mountPath: /data
      volumes:
        - name: minio-pv
          persistentVolumeClaim:
            claimName: minio-pvc
